# ROS2-Activity

./: LICENSE  README.md
Source_Code/: Activity Server.py  CMake.txt  activity_client.py
src/activity_service/activity_service_pkg/: CMakeLists.txt  package.xml
src/activity_service/activity_service_pkg/scripts/: activity_client.py  activity_server.py
src/activity_service/activity_service_pkg/srv/: ActivityCheck.srv
